[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/triangle.png" type="Texture" id=1]
[ext_resource path="res://Art/square.png" type="Texture" id=2]
[ext_resource path="res://Art/star.png" type="Texture" id=3]
[ext_resource path="res://Art/circle.png" type="Texture" id=4]
[ext_resource path="res://Scripts/rotate_tutorial_animation.gd" type="Script" id=5]
[ext_resource path="res://Art/finger2.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "rotate"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("brick:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.6, 1.8, 2.4, 2.6, 3.2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -90.0, -90.0, -180.0, -180.0, -270.0, -270.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hand:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.2, 1.4, 1.6, 2, 2.2, 2.4, 2.8, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hand:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 3.5, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="rotate_tutorial" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
square = ExtResource( 2 )
triangle = ExtResource( 1 )
circle = ExtResource( 4 )
star = ExtResource( 3 )

[node name="brick" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="brick"]
margin_left = -85.0
margin_top = -60.0
margin_right = -35.0
margin_bottom = -10.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="icon2" type="TextureRect" parent="brick"]
margin_left = -25.0
margin_top = -60.0
margin_right = 25.0
margin_bottom = -10.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon3" type="TextureRect" parent="brick"]
margin_left = 35.0
margin_top = -60.0
margin_right = 85.0
margin_bottom = -10.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon4" type="TextureRect" parent="brick"]
margin_left = -25.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true

[node name="hand" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 32.589
margin_top = -21.3916
margin_right = 132.589
margin_bottom = 98.6084
rect_min_size = Vector2( 100, 120 )
rect_rotation = -13.8419
rect_pivot_offset = Vector2( 53.4769, 61.0222 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate = SubResource( 1 )
